# android-opencv-camera

./: .gitmodules  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/de/moritzmorgenroth/opencvtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/de/moritzmorgenroth/opencvtest/: Analytics.kt  CameraPreview.kt  CameraUtil.kt  ImageProcessor.kt  MainActivity.kt  OpenCVActivity.java  ProcessingResultView.kt  RecognizerActivity.java  Scanner.kt
app/src/main/java/de/moritzmorgenroth/opencvtest/camera2/: AutoFitTextureView.kt  Camera2PreviewFragment.kt  CompareSizesByArea.kt
app/src/main/jni/: Android.mk  Application.mk  native-lib.cpp
app/src/main/res/layout/: activity_main.xml  activity_opencv.xml
app/src/test/java/de/moritzmorgenroth/opencvtest/: ExampleUnitTest.kt
openCVLibrary343/: build.gradle
openCVLibrary343/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
opencv/sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java
opencvutil/: build.gradle
opencvutil/src/androidTest/java/de/moritzmorgenroth/opencvutil/: ExampleInstrumentedTest.java
opencvutil/src/main/: AndroidManifest.xml
opencvutil/src/main/java/de/moritzmorgenroth/opencvutil/: RecognizerActivity.java
opencvutil/src/main/jni/: native-lib.cpp
opencvutil/src/main/res/layout/: activity_recognizer.xml
opencvutil/src/main/res/values/: strings.xml
testapp/: build.gradle
testapp/src/main/: AndroidManifest.xml
(+4 files in other folders)
